# Data-annotation

./: .env  .gitignore  HOW_TO_EVALUATION.md  abandoned_ids.txt  abandoned_records.json  all_models_overall.md  app.py  chatgpt_eva_sit_dnc_new888_vllm.py  convert_exported_labels_to_new_format.py  export_json_from_assignment_csv.py  export_json_from_labels.py  exported_labels.json  gemini_run.py  import_export_mapping.txt  import_labels_from_json.py  import_labels_from_json_video.py  task_gen.py  video_app.py  video_app_edit.py  video_app_evaluation.py  video_app_exam.py  video_app_new.py  video_labels.backup_20260215_193412.csv  video_labels.backup_before_reimport_20260218_192219.csv  xu_xinlableyiduan.py  三模型配置总结.md
agents/codar_v1/: .gitignore  README.md  pyproject.toml
agents/codar_v1/analysis/: attitude100_398070_metrics.json  attitude_intent_100_diagnosis_398070_398071.md  attitude_intent_optimization_398070_398071.md  baseline_267_metrics.json  intent100_398071_metrics.json  pred_vs_gt_300.csv  score_gap_report_300.md
agents/codar_v1/config/: runtime.internvl.local.yaml  runtime.remote.local.mock.yaml  runtime.remote.local.template.yaml  runtime.template.yaml  runtime.yaml  scenario_policy.yaml  thresholds.yaml
agents/codar_v1/data/: eval300_shared_aff_att_int_100_each.json  eval300_shared_aff_att_int_100_each.report.json
agents/codar_v1/docs/: DEPLOY_RUNBOOK.md
agents/codar_v1/logs/: dev_events.jsonl
agents/codar_v1/prompts/: P1_explicit_perception.md  P2_social_context.md  P3b_conflict_judge.md
agents/codar_v1/scripts/: build_fixed_300_subset.py  (+8 more)
(+448 files in other folders)
